crates/strider/tests/snapshots/v2__x64__calling_convention__sink16.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nXMM1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "7" -> "3" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "8" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "11" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "12" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x50:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "14" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v15" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v15" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "10" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "18" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "19" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "20" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x48:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "10" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "23" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "24" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x40:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "10" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x38:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="arg[11] ← ram[sp + 48]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "29" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="arg[10] ← ram[sp + 40]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="arg[9] ← ram[sp + 32]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "33" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="arg[8] ← ram[sp + 24]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "35" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="arg[7] ← ram[sp + 16]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "37" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "39" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="arg[6] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "39" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="arg[5] ← R9", shape=Mdiamond, fillcolor="#1a3a5c"];
  "42" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "44" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "45" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="arg[4] ← R8D", shape=Mdiamond, fillcolor="#1a3a5c"];
  "45" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="arg[3] ← ECX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "47" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "49" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "50" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "51" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="arg[1] ← ESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "51" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "53" [label="arg[0] ← RDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "10" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v54" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v54" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
}
